[project]
name = "kb"
version = "0.1.0"
description = "LLM-powered personal knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pypdf>=4.0.0",
    "python-dotenv",
    "python-frontmatter",
    "rank-bm25",
    "youtube-transcript-api>=1.2.4",
    "trafilatura>=1.6.0",
]

[project.scripts]
kb = "kb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
